--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <form>
+            <div>
+            <label for="firstname">First Name :</label>
+            <input type="text" id="firstname" name="First Name"></div>
 
+        <div><label for="LastName">Last Name:</label>
+            <input type="text" id="LastName" name="Last Name"></div>
+
+        <div><label for="phnbr">Phone Number:</label>
+            <input type="number" id="phnbr" name="Phone Number"></div>
+
+        <div><label for="emid">Email ID: </label>
+            <input type="text" id="emid" name="Email ID"></div>
+
+        <div><button id="submit">Submit</button></div>
+        </form>
+        <script src="script.js"></script>
+    </div>
 </body>
-
 </html>
