--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <form>
+        <form id="form">
             <div>
             <label for="firstname">First Name :</label>
             <input type="text" id="firstname" name="First Name"></div>
